# xwiimote

./: .gitignore  Makefile.am  configure.ac
lib/: xwiimote.h
swig/: xwiimote.i
swig/perl/: Makefile.PL.in  Makefile.am
swig/python/: Makefile.am  setup.py.in
